# hkvwaporpy

./: .gitignore  README.md  Wapor_hkv_example.py  pyproject.toml
hkvwaporpy/: __init__.py  fao_wapor_api.py  hkvwapory.code-workspace
hkvwaporpy/io/: fao_wapor_api.py
io/: fao_wapor_api.py
notebook/: deprecated beta version for archive.ipynb  example deprecated.ipynb  example usage hkvwaporpy.ipynb  hkvwaporpy example.ipynb
