[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hkvwaporpy"
author = "Mattijn van Hoek"
author-email = "hoek@hkv.nl"
home-page = "https://github.com/HKV-products-services/hkvwaporpy"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

